[project]
name = "void-sparse"
version = "0.3.0"
description = "High-performance block-sparse matrix operations for GPUs with Triton kernels"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "VOID Contributors"}
]
keywords = [
    "sparse-matrix",
    "gpu",
    "deep-learning",
    "attention",
    "triton",
    "pytorch",
    "high-performance-computing",
    "fp8",
    "tensor-cores",
    "flash-attention",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.1.0", # Upgraded for FP8 dtype support
    "triton>=3.0.0", # Upgraded for FP8 + async_copy
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.8",
]

[project.urls]
Homepage = "https://github.com/khushiyant/void"
Repository = "https://github.com/khushiyant/void"
Documentation = "https://github.com/khushiyant/void#readme"
Issues = "https://github.com/khushiyant/void/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest>=7.0.0",
    "matplotlib>=3.7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cuda: marks tests as requiring CUDA",
]
